[gd_scene load_steps=83 format=3 uid="uid://dv5gegjgkxtb6"]

[ext_resource type="Script" path="res://Scripts/Entities/Player/Player.gd" id="1_i5iyk"]
[ext_resource type="Resource" uid="uid://bnx60flo0qggv" path="res://Resources/Entities/Player/DefaultPlayerMovementData.tres" id="2_u2t6b"]
[ext_resource type="Shader" path="res://Shaders/OutlineShader.gdshader" id="3_5mgfl"]
[ext_resource type="Texture2D" uid="uid://bha1tvdc8x88v" path="res://Sprites/Entities/Players/DefaultPlayerSpriteSheet.png" id="3_mg8wc"]
[ext_resource type="PackedScene" uid="uid://cfoemwbbnhoxt" path="res://Scenes/Tools/health_manager.tscn" id="4_5efsd"]
[ext_resource type="Script" path="res://Scripts/Entities/Player/MiaPlayerAnimator.gd" id="4_pv58u"]
[ext_resource type="PackedScene" uid="uid://b7lq6gjy6c3df" path="res://Scenes/Tools/hurtbox.tscn" id="5_5qhau"]
[ext_resource type="Texture2D" uid="uid://by7paajtwxm1j" path="res://Sprites/Effects/PlayerRunParticles.png" id="5_5ykpu"]
[ext_resource type="Script" path="res://Scenes/Entities/Players/EnergyManager.gd" id="5_oewj8"]
[ext_resource type="Script" path="res://Scenes/Tools/PlayerHealthManager.gd" id="6_axhv3"]
[ext_resource type="Resource" uid="uid://bdr5173wns2s1" path="res://Resources/Guns/Shotgun.tres" id="7_q5vv4"]
[ext_resource type="Resource" uid="uid://cqd2tcwsc6ars" path="res://Resources/Guns/SMG.tres" id="8_y7nir"]
[ext_resource type="Script" path="res://Scenes/Entities/Players/PlayerCamera.gd" id="9_ljrqa"]
[ext_resource type="PackedScene" uid="uid://0orid71kqqme" path="res://Scenes/Tools/status_effects_manager.tscn" id="10_cx3tu"]
[ext_resource type="Script" path="res://Scripts/Entities/Player/PlayerAbilities.gd" id="10_js2w2"]
[ext_resource type="Script" path="res://Scripts/Entities/Player/MiaGun.gd" id="12_bywjo"]
[ext_resource type="Script" path="res://Scenes/Entities/Players/PlayerRollAbility.gd" id="15_f8wd2"]
[ext_resource type="Texture2D" uid="uid://ctoxm2mh6bdp7" path="res://Sprites/Guns/DefaultPlayerGuns.png" id="15_h7cox"]
[ext_resource type="PackedScene" uid="uid://dafeqsxxwb8oo" path="res://Scenes/Abilities/ice_bomb_ability.tscn" id="17_cfdqs"]
[ext_resource type="PackedScene" uid="uid://7ri57fl6mrqt" path="res://Scenes/Abilities/bomb_ability.tscn" id="18_3n3r1"]
[ext_resource type="Texture2D" uid="uid://cdg5pjvsn3wxb" path="res://Sprites/UI/DefaultPlayerRollIcon.png" id="21_d1h8h"]
[ext_resource type="PackedScene" uid="uid://dlseb4whqrry5" path="res://Scenes/Tools/overhead_health_bar.tscn" id="24_xj285"]
[ext_resource type="Script" path="res://Scripts/Entities/Player/Abilities/MiaPassiveAbility.gd" id="25_ggh1t"]
[ext_resource type="Script" path="res://Scenes/Tools/PlayerOverheadHealthBar.gd" id="25_ya66m"]
[ext_resource type="FontFile" uid="uid://8m065evukno3" path="res://Fonts/NbPixelFontBundle/KarenFat.ttf" id="26_kasl1"]
[ext_resource type="Script" path="res://Scripts/Entities/Player/PlayerMagnet.gd" id="26_ugftn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yq30f"]
resource_local_to_scene = true
size = Vector2(16, 31)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iyck5"]
shader = ExtResource("3_5mgfl")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/width_multiplier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rfk22"]
atlas = ExtResource("3_mg8wc")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aan6h"]
atlas = ExtResource("3_mg8wc")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pogey"]
atlas = ExtResource("3_mg8wc")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbl46"]
atlas = ExtResource("3_mg8wc")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4exfe"]
atlas = ExtResource("3_mg8wc")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh74m"]
atlas = ExtResource("3_mg8wc")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk8ac"]
atlas = ExtResource("3_mg8wc")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fspup"]
atlas = ExtResource("3_mg8wc")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjmwr"]
atlas = ExtResource("3_mg8wc")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7tqe"]
atlas = ExtResource("3_mg8wc")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_13n3v"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywlq1"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjbhf"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1248, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlw8x"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1344, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjqn6"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1440, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyhbt"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1536, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iva8x"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1632, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsons"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1728, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlboq"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1824, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0or0"]
atlas = ExtResource("3_mg8wc")
region = Rect2(1920, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyt3u"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2016, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5rv3"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2112, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3h7d"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2208, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul8fg"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2304, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v3ao"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2400, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_slbhi"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2496, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ehyt"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2592, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl75s"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2688, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsjg8"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2784, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j6nj"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2880, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_duaay"]
atlas = ExtResource("3_mg8wc")
region = Rect2(2976, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8lom"]
atlas = ExtResource("3_mg8wc")
region = Rect2(3072, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxdim"]
atlas = ExtResource("3_mg8wc")
region = Rect2(3168, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tk5k7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfk22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aan6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pogey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbl46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4exfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh74m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk8ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fspup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjmwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7tqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13n3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywlq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjbhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlw8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjqn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyhbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iva8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsons")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlboq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0or0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyt3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5rv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3h7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul8fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v3ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slbhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ehyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl75s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsjg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j6nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duaay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8lom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxdim")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_1pfbg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PlayerGun/Anchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_wcfua"]
resource_name = "dive_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}

[sub_resource type="Animation" id="Animation_nqhtq"]
resource_name = "dive_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [27, 28, 29]
}

[sub_resource type="Animation" id="Animation_b6s5w"]
resource_name = "fall"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PlayerGun/Anchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(3.33786e-06, -3.09944e-06), Vector2(3.33786e-06, 0.999997), Vector2(3.33786e-06, 0.999997), Vector2(3.33786e-06, 0.999997)]
}

[sub_resource type="Animation" id="Animation_iejrj"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PlayerGun/Anchor:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_kx0tn"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PlayerGun/Anchor:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.999997, -3.09944e-06), Vector2(-0.999997, -3.09944e-06), Vector2(-0.999997, -1), Vector2(-0.999997, -1)]
}

[sub_resource type="Animation" id="Animation_xrewo"]
resource_name = "roll"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_yd40b"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_step_sound"
}, {
"args": [],
"method": &"play_step_sound"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PlayerGun/Anchor:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(-2, 3), Vector2(-0.999996, 2), Vector2(-0.999996, 0.999997), Vector2(-0.999997, 0.999997), Vector2(-0.999998, 3), Vector2(-0.999999, 3), Vector2(-0.999999, 1)]
}

[sub_resource type="Animation" id="Animation_s41un"]
resource_name = "wall_slide"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PlayerGun/Anchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bmj8j"]
_data = {
"RESET": SubResource("Animation_1pfbg"),
"dive_down": SubResource("Animation_wcfua"),
"dive_up": SubResource("Animation_nqhtq"),
"fall": SubResource("Animation_b6s5w"),
"idle": SubResource("Animation_iejrj"),
"jump": SubResource("Animation_kx0tn"),
"roll": SubResource("Animation_xrewo"),
"run": SubResource("Animation_yd40b"),
"wall_slide": SubResource("Animation_s41un")
}

[sub_resource type="Curve" id="Curve_rfeis"]
_data = [Vector2(0, 0), 0.0, 24.3515, 0, 0, Vector2(0.087108, 1), 0.0, 0.0, 0, 0, Vector2(0.184669, 1), -0.372728, -0.372728, 0, 0, Vector2(1, 0), -0.954545, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_ksa38"]
curve = SubResource("Curve_rfeis")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vim6y"]
lifetime_randomness = 0.75
emission_shape = 3
emission_box_extents = Vector3(3, 0.1, 1)
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.4
scale_max = 0.8
scale_curve = SubResource("CurveTexture_ksa38")

[sub_resource type="Curve" id="Curve_hifdp"]
_data = [Vector2(0, 0.85), 0.0, 0.25, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_oqph6"]
_data = [Vector2(0, 1), 0.0, -0.9, 0, 0, Vector2(1, 0.6), -0.164577, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5rlg"]
resource_local_to_scene = true
size = Vector2(14, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl0li"]
atlas = ExtResource("15_h7cox")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otldu"]
atlas = ExtResource("15_h7cox")
region = Rect2(64, 0, 32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_urqol"]
font = ExtResource("26_kasl1")

[sub_resource type="CircleShape2D" id="CircleShape2D_d06gi"]
radius = 64.0

[node name="Mia" type="CharacterBody2D" groups=["Player"]]
z_index = 6
position = Vector2(-251, 102)
collision_mask = 65549
collision_priority = 5.0
floor_block_on_wall = false
platform_on_leave = 2
script = ExtResource("1_i5iyk")
movement_data = ExtResource("2_u2t6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_yq30f")

[node name="Animator" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_iyck5")
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_tk5k7")
offset = Vector2(0, -24)
script = ExtResource("4_pv58u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animator"]
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_bmj8j")
}

[node name="RunParticles" type="GPUParticles2D" parent="Animator"]
scale = Vector2(1e-05, 1e-05)
amount = 2
process_material = SubResource("ParticleProcessMaterial_vim6y")
texture = ExtResource("5_5ykpu")
lifetime = 0.2
explosiveness = 0.4
randomness = 0.2
draw_order = 0

[node name="HealthManager" parent="." instance=ExtResource("4_5efsd")]
script = ExtResource("6_axhv3")
damage_modifier_curve = SubResource("Curve_hifdp")
danger_zone_value = 25
danger_damage_modifier = 0.75
iframe_time = 0.15
danger_iframe_time = 0.3
danger_start_iframe = 0.6
healing_modifier_curve = SubResource("Curve_oqph6")
health_to_kill = -8

[node name="EnergyManager" type="Node2D" parent="."]
script = ExtResource("5_oewj8")
max_energy = 280.0

[node name="StatusEffectsManager" parent="." instance=ExtResource("10_cx3tu")]

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health_manager", "status_effects_manager") instance=ExtResource("5_5qhau")]
collision_mask = 0
health_manager = NodePath("../HealthManager")
status_effects_manager = NodePath("../StatusEffectsManager")
metadata/isPlayer = true

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_c5rlg")

[node name="Camera" type="Camera2D" parent="."]
limit_left = -600
limit_top = -540
limit_right = 580
limit_bottom = 240
position_smoothing_speed = 10.0
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0
script = ExtResource("9_ljrqa")

[node name="PlayerGun" type="Node2D" parent="." node_paths=PackedStringArray("spawn_point", "player_sprite", "ammo_bar")]
z_index = 1
position = Vector2(0, 1)
script = ExtResource("12_bywjo")
ammo_count = 2
ammo_replenish_over_speed = 0.014
ammo_replenish_over_damage = 0.3
spawn_point = NodePath("Anchor/SpawnPoint")
player_sprite = NodePath("../Animator")
primary_gun = ExtResource("7_q5vv4")
secondary_gun = ExtResource("8_y7nir")
ammo_bar = NodePath("../AmmoBar")

[node name="Anchor" type="Node2D" parent="PlayerGun"]
position = Vector2(0, 1)

[node name="Sprite" type="Sprite2D" parent="PlayerGun/Anchor"]
texture = SubResource("AtlasTexture_xl0li")
offset = Vector2(7, 0)

[node name="Outline" type="Sprite2D" parent="PlayerGun/Anchor/Sprite"]
z_index = -3
texture = SubResource("AtlasTexture_otldu")
offset = Vector2(7, 0)

[node name="SpawnPoint" type="Node2D" parent="PlayerGun/Anchor"]
position = Vector2(14, 0)

[node name="Abilities" type="Node2D" parent="."]

[node name="PlayerAbilities" type="Node2D" parent="Abilities" node_paths=PackedStringArray("energy_manager")]
script = ExtResource("10_js2w2")
energy_manager = NodePath("../../EnergyManager")

[node name="IceBombAbility" parent="Abilities/PlayerAbilities" node_paths=PackedStringArray("gun") instance=ExtResource("17_cfdqs")]
gun = NodePath("../../../PlayerGun")

[node name="BombAbility" parent="Abilities/PlayerAbilities" node_paths=PackedStringArray("gun") instance=ExtResource("18_3n3r1")]
gun = NodePath("../../../PlayerGun")

[node name="MovementAbility" type="Node2D" parent="Abilities" node_paths=PackedStringArray("player_animations", "player_gun")]
script = ExtResource("15_f8wd2")
roll_speed = 1200.0
roll_invulnerability_time = 0.3
air_roll_velocity = Vector2(300, -300)
player_animations = NodePath("../../Animator")
player_gun = NodePath("../../PlayerGun")
cooldown = 1.5
display_icon = ExtResource("21_d1h8h")

[node name="PassiveAbility" type="Node2D" parent="Abilities" node_paths=PackedStringArray("ammo_bar", "player_gun")]
script = ExtResource("25_ggh1t")
ammo_bar = NodePath("../../AmmoBar")
player_gun = NodePath("../../PlayerGun")

[node name="Label" type="Label" parent="Abilities/PassiveAbility"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -62.0
offset_right = 20.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = SubResource("LabelSettings_urqol")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OverheadHealthBar" parent="." node_paths=PackedStringArray("health_manager") instance=ExtResource("24_xj285")]
offset_left = -21.0
offset_top = -29.0
offset_right = 21.0
offset_bottom = -23.0
tint_progress = Color(0.301961, 0.945098, 0.352941, 1)
script = ExtResource("25_ya66m")
normal_color = Color(0.301961, 0.945098, 0.352941, 1)
danger_color = Color(0.898039, 0.141176, 0.141176, 1)
gain_color = Color(0.317647, 0.396078, 0.870588, 1)
loss_color = Color(0.898039, 0.141176, 0.141176, 1)
health_manager = NodePath("../HealthManager")

[node name="BackHealthBar" parent="OverheadHealthBar" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="OverheadEnergyBar" parent="." node_paths=PackedStringArray("health_manager") instance=ExtResource("24_xj285")]
offset_left = -21.0
offset_top = -24.0
offset_right = 21.0
offset_bottom = -18.0
tint_progress = Color(0.980392, 0.74902, 0.47451, 1)
health_manager = NodePath("../EnergyManager")

[node name="BackHealthBar" parent="OverheadEnergyBar" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
tint_progress = Color(0.807843, 0.176471, 0.45098, 1)

[node name="AmmoBar" type="HBoxContainer" parent="."]
offset_left = -21.0
offset_top = -39.0
offset_right = 21.0
offset_bottom = -29.0
theme_override_constants/separation = 1
alignment = 1

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256
monitorable = false
script = ExtResource("26_ugftn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magnet"]
shape = SubResource("CircleShape2D_d06gi")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="moved" from="." to="PlayerGun" method="_on_player_moved"]
[connection signal="animation_finished" from="Animator/AnimationPlayer" to="Animator" method="_on_animation_player_animation_finished"]
[connection signal="entity_killed" from="HealthManager" to="." method="_on_health_manager_entity_killed"]
[connection signal="health_updated" from="HealthManager" to="." method="_on_health_manager_health_updated"]
[connection signal="energy_updated" from="EnergyManager" to="." method="_on_energy_manager_energy_updated"]
[connection signal="area_entered" from="Magnet" to="Magnet" method="_on_area_entered"]
[connection signal="body_entered" from="Magnet" to="Magnet" method="_on_body_entered"]

[editable path="Hurtbox"]
[editable path="OverheadHealthBar"]
[editable path="OverheadEnergyBar"]
